// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрисовать доступные уровни 1`] = `
<ol
  className="CardBreadcrumbsMicrodata"
  itemScope={true}
  itemType="http://schema.org/BreadcrumbList"
>
  <li
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/ListItem"
    key="breadcrumbs-microdata-markName"
  >
    <meta
      content="markName"
      itemProp="name"
    />
    <meta
      content={1}
      itemProp="position"
    />
  </li>
</ol>
`;

exports[`не должен отрисовать уровни, если они ничего не вернули 1`] = `
<ol
  className="CardBreadcrumbsMicrodata"
  itemScope={true}
  itemType="http://schema.org/BreadcrumbList"
>
  <li
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/ListItem"
    key="breadcrumbs-microdata-markName"
  >
    <a
      href="link/routeName/?"
      itemProp="item"
      tabIndex="-1"
    >
      <meta
        content="markName"
        itemProp="name"
      />
    </a>
    <meta
      content={1}
      itemProp="position"
    />
  </li>
</ol>
`;
